<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Urban Game</string>
    <string name="string_empty"></string>

    <!-- UrbanGameMockActivity -->
    <string name="button_games">Games</string>
    <string name="button_tasks">Tasks</string>

    <!-- GamesListActivity (StartActivity) -->
    <string name="label_tasks">Tasks:</string>
    <string name="label_points">Points:</string>
    <string name="label_timeLeft">Time left:</string>
    <string name="label_joined">Joined</string>
    <string name="label_notJoined">Not joined</string>
    <string name="label_freeSlots">Free slots:</string>
    <string name="label_players">Players:</string>
    <string name="label_daysLeft">Days left:</string>
    <string name="label_hoursLeft">Hours left:</string>
    <string name="label_minutesLeft">Minutes left:</string>
    <string name="header_nearby_games">NEARBY GAMES</string>
    <string name="string_players">players</string>
    <string-array name="difficulty_levels">
        <item>very easy</item>
        <item>easy</item>
        <item>medium</item>
        <item>hard</item>
        <item>very hard</item>
        <item>extremely hard</item>
    </string-array>

    <!-- TasksListActivity -->
    <string name="label_points2">" pts"</string>
    <string name="slash">/</string>
    <string name="header_active_tasks">ACTIVE TASKS</string>
    <string name="header_inactive_tasks">INACTIVE TASKS</string>
    <string name="header_finished_tasks">FINISHED TASKS</string>
    <string name="header_canceled_tasks">CANCELED TASKS</string>
    <string name="text_view_hidden_tasks">Hidden tasks found:</string>
    <string name="text_view_empty_active_list">There are no tasks at
        this point. Try later or try to connect from different area of
        the city to receive hidden bonus tasks.</string>

    <!-- ActionBar -->
    <string name="menu_search_hint">Filter games</string>
    <string name="menu_search">Search</string>
    <string name="menu_help">Help</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_feedback">Send feedback</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_login">Login</string>
    <string name="menu_messages">Messages</string>
    <string name="menu_more">More</string>
    <string name="menu_alert">Alert</string>

    <string-array name="menu_navigation_list">
        <item>My games</item>
        <item>All games</item>
    </string-array>

    <!-- GamesDetailsActivity -->
    <string name="label_winners">Winners:</string>
    <string name="label_start">Start:</string>
    <string name="label_end">End:</string>
    <string name="label_difficulty">Difficulty:</string>
    <string name="button_leave">Leave</string>
    <string name="button_join">Join</string>
    <string name="header_prizes">PRIZES</string>
    <string name="header_description">DESCRIPTION</string>
    <string name="header_details">DETAILS</string>
    <string name="dialog_join_title">Join to the game</string>
    <string name="dialog_leave_title">Leave game</string>
    <string name="dialog_join_leave_message">Are you sure?</string>
    <string name="dialog_join_leave_positive_button">Yes</string>
    <string name="dialog_join_leave_negative_button">No</string>

    <!-- ActiveGameActivity -->
    <string name="tab_game_gameInfo">Game info</string>
    <string name="tab_game_tasks">Tasks</string>
    <string name="tab_game_ranking">Ranking</string>
    <string name="header_prerequisites">PREREQUISITES</string>
    <string name="info_task_inactive">This task is inactive.</string>
    <string name="info_task_canceled">This task have been canceled.</string>
    <string name="info_task_finished">You have already finished this task.</string>
    <string name="info_task_canceled_points">All the points given for this task have been canceled.</string>

    <!-- ActiveTaskActivity -->
    <string name="tab_task_description">Description</string>
    <string name="tab_task_answer">Answer</string>

    <!-- Time related strings -->
    <string name="label_to_end">to end</string>
    <string name="label_to_start">to start</string>
    <string name="label_ended">Ended:</string>

    <plurals name="numberOfYears">
        <item quantity="one">one year</item>
        <item quantity="other">%d years</item>
    </plurals>
    <plurals name="numberOfMonths">
        <item quantity="one">one month</item>
        <item quantity="other">%d months</item>
    </plurals>
    <plurals name="numberOfWeeks">
        <item quantity="one">one week</item>
        <item quantity="other">%d weeks</item>
    </plurals>
    <plurals name="numberOfDays">
        <item quantity="one">one day</item>
        <item quantity="other">%d days</item>
    </plurals>
    <plurals name="numberOfHours">
        <item quantity="one">one hour</item>
        <item quantity="other">%d hours</item>
    </plurals>
    <plurals name="numberOfMinutes">
        <item quantity="one">one minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <plurals name="numberOfSeconds">
        <item quantity="one">one second</item>
        <item quantity="other">%d seconds</item>
    </plurals>

    <!-- Task -->
    <string name="label_taksRepeatable">repeatable</string>
    <string name="label_taskNon_repeatable">non-repeatable</string>
    <string name="button_submit">Submit</string>
    <string name="label_your_answer">Your Answer:</string>

    <!-- ProfileActivity -->
    <string name="button_save">Save</string>
    <string name="button_skip">Skip</string>

    <!-- MyGamesActivity -->
    <string name="header_active">ACTIVE</string>
    <string name="header_ended">ENDED</string>
    <string name="header_observed">OBSERVED</string>

    <!-- UserSettingsActivity -->
    <string name="settings_notifications">Notifications</string>
    <string name="settings_notifications_on_summary">Enable or disable notifications in application.</string>
    <string name="settings_notifications_on_title">Enabled</string>
    <string name="settings_database">Database</string>
    <string name="settings_database_encryption_on_summary">Enable or disable encryption in database.</string>
    <string name="settings_database_encryption_on_title">Encryption</string>
    <string name="settings_style">Style</string>
    <string name="settings_theme_summary">Sets application theme. Application should be restarted.</string>
    <string name="settings_theme_title">Theme</string>
    <string name="settings_server">Urban Game server</string>
    <string name="settings_server_default_server_address">http://urbangame.patronage.blstream.com</string>
    <string name="settings_server_address">Server address</string>

    <!-- Content descriptions -->
    <string name="contentDescription_gameLogo">Game logo</string>
    <string name="contentDescription_operatorLogo">Operator logo</string>
    <string name="contentDescription_prize">Prize</string>
    <string name="contentDescription_taskLogo">Task Logo</string>
    <string name="contentDescription_newTaskIndicator">New Task Indicator</string>
    <string name="contentDescription_taskTypeIcon">Task type icon</string>
    <string name="contentDescription_dividerHorizontalLine">Divider - horizontal line</string>
    <string name="contentDescription_taskImage">Image associated with this task</string>
    <string name="contentDescription_profileImage">Profile image</string>

    <!-- Logging in -->
    <string name="hint_email">E-mail</string>
    <string name="hint_password">Password</string>
    <string name="hint_displayName">Display name</string>
    <string name="checkbox_show_password">Show password</string>
    <string name="button_register">Register</string>
    <string name="button_login">Login</string>
    <string name="button_correct">Correct</string>
    <string name="dialog_register_title">Account registered</string>
    <string name="dialog_register_message">Verification link has been sent to your email address</string>
    <string name="dialog_data_invalid_tittle">Invalid data</string>
    <string name="dialog_data_invalid_message">Some of provided data is incorrect</string>
    <string name="dialog_user_already_exists">User with this email already exists</string>
    <string name="dialog_invalid_login">Invalid email or password</string>
    <string name="tabTitle_login">LOGIN</string>
    <string name="tabTitle_register">CREATE NEW ACCOUNT</string>

    <!-- Profile Activity -->
    <string name="profile_activity_dialog_title">Choose avatar from:</string>

    <string-array name="profile_activty_dialog_options">
        <item>Gallery</item>
        <item>Camera</item>
    </string-array>

    <!-- Answer Dialog -->
    <string name="title_right">Correct</string>
    <string name="title_wrong">Wrong</string>
    <string name="title_partially_right">Not so great</string>
    <string name="title_no_internet">No Internet connection</string>
    <string name="title_no_gps_signal">No GPS signal</string>
    <string name="title_gps_off">GPS is off</string>
    <string name="message_answer_score">%1$d/%2$d points</string>
    <string name="message_no_internet">Make sure you are connected to the Internet to submit the answer.</string>
    <string name="message_device_offline">Device is offline! Go to settings to enable internet connection.</string>
    <string name="message_no_gps_signal">Please wait for a valid GPS signal.</string>
    <string name="message_gps_off">Turn on GPS in the settings to submit the answer.</string>
    <string name="answer_dialog_button_settings">Settings</string>

    <!-- Answer Dialog -->
    <string name="title_right">Correct</string>
    <string name="title_wrong">Wrong</string>
    <string name="title_partially_right">Not so great</string>
    <string name="title_no_internet">No Internet connection</string>
    <string name="title_no_gps_signal">No GPS signal</string>
    <string name="title_gps_off">GPS is off</string>
    <string name="message_answer_score">%1$d/%2$d points</string>
    <string name="message_no_internet">Make sure you are connected to the Internet to submit the answer.</string>
    <string name="message_no_gps_signal">Please wait for a valid GPS signal.</string>
    <string name="message_gps_off">Turn on GPS in the settings to submit the answer.</string>
    <string name="answer_dialog_button_settings">Settings</string>

    <!-- Notifications -->
    <string name="notification_title_game_changed">Game changed</string>
    <string name="notification_title_game_over">Game over</string>
    <string name="notification_title_game_won">You won!</string>
    <string name="notification_title_game_lost">You lost!</string>
    <string name="notification_title_task_new">New task</string>
    <string name="notification_title_task_changed">Task changed</string>
    <string name="notification_message_game_changed">Game %s has been changed.</string>
    <string name="notification_message_game_over">Game %s is over.</string>
    <string name="notification_message_task_new">New task %1$s in %2$s game is available.</string>
    <string name="notification_message_task_changed">Task %1$s in %2$s game has been changed.</string>
    <string name="dialog_show">Show</string>
    <string name="dialog_dismiss">Dismiss</string>

    <!-- Shared preferences -->
    <string name="key_notifications_on">keyNotificationsOn</string>
    <string name="key_database_encryption_on">keyDatabaseEncryptionOn</string>
    <string name="key_theme">keyTheme</string>
    <string name="key_server_name">keyServerName</string>

</resources>
