<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/settings_notifications" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/key_notifications_on"
            android:summary="@string/settings_notifications_on_summary"
            android:title="@string/settings_notifications_on_title" >
        </CheckBoxPreference>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_database" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/key_database_encryption_on"
            android:summary="@string/settings_database_encryption_on_summary"
            android:title="@string/settings_database_encryption_on_title" >
        </CheckBoxPreference>
    </PreferenceCategory>

</PreferenceScreen>