<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:layout_marginLeft="@dimen/view_margin"
    android:layout_marginRight="@dimen/view_margin"
    android:orientation="vertical" >
    
    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/hint_email"/>
    
    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/hint_password" />
    
    <CheckBox 
        android:id="@+id/checkBoxShowPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_show_password"/>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <Button
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/button_register"
            android:onClick="onRegisterButtonClicked"/>
        
        <Button
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/button_log_in"
            android:onClick="onLogInButtonClicked" />
    </LinearLayout>
    

</LinearLayout>