<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/view_margin"
    android:layout_marginRight="@dimen/view_margin"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/LinearLayoutWrapperProfileButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editTextDislayName">

        <Button
            android:id="@+id/buttonProfileSaveButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_save" />

        <Button
            android:id="@+id/buttonProfileSkipButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_skip" />
    </LinearLayout>

    <EditText
        android:id="@+id/editTextDislayName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <ImageView
        android:id="@+id/imageViewProfileImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTextDislayName"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="75dp"
        android:contentDescription="@string/contentDescription_profileImage"
        android:src="@drawable/mock_profile_image" />

</RelativeLayout>